:sparkles: 新增上传图片接口
